outputs/rq_train_9299321.err
  File "train.py", line 452
    get validation AUC every 500 step 
                 ^
SyntaxError: invalid syntax
